--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 streamlit==1.51.0
-tensorflow-cpu==2.14.0
+tflite-runtime==2.14.0
 Pillow==10.1.0
 numpy==1.24.3
-gTTS==2.4.0
+gtts==2.4.0
 scikit-image==0.21.0
-protobuf==3.20.0
