--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.28.1
-tensorflow==2.13.0
-Pillow==10.0.0
+tensorflow==2.13.1
 numpy==1.24.3
+Pillow==10.0.0
 gtts==2.4.0
+protobuf==3.20.0
